collapse issue and dashjboard tanle and sidenav color change

--- a/src/Pages/Dashboard/styles/dashboard.css
+++ b/src/Pages/Dashboard/styles/dashboard.css
@@ -47,12 +47,12 @@ a:focus {
 .sidebar {
   min-width: 250px;
   max-width: 250px;
-  background: #354052;
-  color: #adb5bd;
+  background: #d5b39a;
+  color: #ffffff !important;
   margin-left: -250px;
   transition: all 0.5s;
   position: fixed !important;
-
+  font-weight: bold;
   left: 0;
   height: -webkit-fill-available;
   z-index: 1;
@@ -67,18 +67,21 @@ a:focus {
 }
 
 .sidebar-header {
-  background: #354052;
-  color: #adb5bd;
+  background: #d5b39a;
+  color: black !important;
+  font-weight: bold;
 }
 
 .sidebar-header h3 {
-  color: #fff;
+  color: black;
   padding: 1em;
+  font-weight: bold;
 }
 
 .sidebar ul p {
-  color: #fff;
+  color:black;
   padding: 10px;
+  font-weight: bold;
 }
 
 .collapse.show,
@@ -88,23 +91,26 @@ a:focus {
 
 .nav-item {
   /*color: #ced4da;*/
-  color: #adb5bd;
+  color: black !important;
   font-weight: 300;
+  font-weight: bold;
 }
 
 .nav-item.open {
-  color: #e9ecef;
+  color: black !important;
   background: #313b4c;
+  font-weight: bold;
 }
 
 .nav-item.active {
-  color: #e9ecef;
+  color: black;
   background: #2d3646 !important;
 }
 
 .nav-item:hover {
-  background: #313b4c;
-  color: #fff;
+  background: #1AA05B !important;
+  color: black;
+  font-weight: bold;
   transition: 0.2s;
 }
 
